log
Thu 23 Mar 2023 03:33:29 PM UTC: 
 tests:  0|6
total_score: 0/70
1750287
Thu 23 Mar 2023 03:38:20 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
7389379
Thu 23 Mar 2023 03:43:57 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:40:1: error: control reaches end of non-void function [-Werror=return-type]
   40 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
7853e9e
Thu 23 Mar 2023 03:44:15 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:40:1: error: control reaches end of non-void function [-Werror=return-type]
   40 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
4ae42db
Thu 23 Mar 2023 03:44:26 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
4e9c743
Thu 23 Mar 2023 03:47:59 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
96d7c3f
Thu 23 Mar 2023 03:48:11 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:41:1: error: control reaches end of non-void function [-Werror=return-type]
   41 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
8dc90b2
Thu 23 Mar 2023 03:48:19 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:40:5: error: ‘return’ with no value, in function returning non-void [-Werror=return-type]
   40 |     return;
      |     ^~~~~~
list.c:38:8: note: declared here
   38 | void * firstList(List * list) {
      |        ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
d72af8a
Thu 23 Mar 2023 03:49:16 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
ac4208e
Thu 23 Mar 2023 03:49:39 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
f303bb6
Thu 23 Mar 2023 03:50:09 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:40:12: error: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘Node *’ [-Werror=format=]
   40 |   printf("%d", list->head);
      |           ~^   ~~~~~~~~~~
      |            |       |
      |            int     Node *
cc1: all warnings being treated as errors
Compilation failed
28b7347
Thu 23 Mar 2023 03:50:39 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:40:12: error: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘void *’ [-Werror=format=]
   40 |   printf("%d", list->head->data);
      |           ~^   ~~~~~~~~~~~~~~~~
      |            |             |
      |            int           void *
      |           %p
cc1: all warnings being treated as errors
Compilation failed
88852c3
Thu 23 Mar 2023 03:50:53 PM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
af4545e
Thu 23 Mar 2023 04:07:40 PM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
561a5c1
Thu 23 Mar 2023 04:08:24 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
a9771c2
Thu 23 Mar 2023 04:08:36 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
24e5e9c
Thu 23 Mar 2023 04:09:41 PM UTC: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:39:12: error: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘void *’ [-Werror=format=]
   39 |   printf("%d", list->head->data);
      |           ~^   ~~~~~~~~~~~~~~~~
      |            |             |
      |            int           void *
      |           %p
cc1: all warnings being treated as errors
Compilation failed
92dbf5c
Thu 23 Mar 2023 04:09:55 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
3bbfe08
Thu 23 Mar 2023 04:10:16 PM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
ab754f0
Thu 23 Mar 2023 04:10:37 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
63dae82
Thu 23 Mar 2023 04:10:51 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c3de641
Thu 23 Mar 2023 04:11:03 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
d82304e
Thu 23 Mar 2023 04:12:33 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
3343801
